--- a/dalcshub-react/src/index.css
+++ b/dalcshub-react/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.contactus{
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  width: 75%;
+  height: 75vh;
+}
+
+.contactbox{
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: 50% 50%;
+}
+
+.contact1{
+  margin: 3%;
+  padding-top: 5px;
+  box-shadow: 10px 10px 20px gray;
+}
+
+.contact2{
+  margin: 3%;
+  padding-bottom: 5px;
+  box-shadow: 10px 10px 20px gray;
+}
+
