--- a/dalcshub-react/src/index.css
+++ b/dalcshub-react/src/index.css
@@ -29,7 +29,7 @@ code {
 .contact1{
   text-align: left;
   margin: 3%;
-  padding: 5px;
+  padding: 10px;
   box-shadow: 10px 10px 20px gray;
 }
 
@@ -52,6 +52,14 @@ code {
   box-sizing: border-box;
 }
 
+#contact-btn{
+  margin-top: 3%;
+  background-color: palegreen;
+}
+
+#contact-btn2{
+  background-color: palegreen;
+}
 
 @media screen and (max-width: 400px) {
 
